--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 /web/bundles/
 /web/css/
 /web/fonts/
+/web/sass/
+!/web/_bootstrap.scss
 /web/sass/.sass-cache/
 /web/sass/bootstrap/*
 !/web/sass/bootstrap/_variables.scss
