--- a/src/Codascii/CoreBundle/Resources/config/routing.yml
+++ b/src/Codascii/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,21 @@
-codascii_core_homepage:
+codascii_homepage:
     path:     /
     defaults: { _controller: CodasciiCoreBundle:Default:index }
+
+codascii_login:
+    path:     /login
+    defaults: { _controller: CodasciiCoreBundle:Default:login }
+
+codascii_register:
+    path:     /register
+    defaults: { _controller: CodasciiCoreBundle:Default:register }
+
+codascii_contact:
+    path:     /contact
+    defaults: { _controller: CodasciiCoreBundle:Default:contact }
+
+codascii_search:
+    path:     /search
+    defaults: { _controller: CodasciiCoreBundle:Default:search }
+
+
