Add of a new bundle 'ArticleBundle'

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+codascii_article:
+    resource: "@CodasciiArticleBundle/Resources/config/routing.yml"
+    prefix:   /article
+
 codascii_core:
     resource: "@CodasciiCoreBundle/Resources/config/routing.yml"
     prefix:   /
