Developpement of the differents tuto's view

--- a/src/Codascii/TutoBundle/Resources/config/routing.yml
+++ b/src/Codascii/TutoBundle/Resources/config/routing.yml
@@ -11,7 +11,7 @@ codascii_all_tuto:
         language: html-css|cpp|php|javascript|jquery
 
 codascii_tuto:
-    path:     /{language}/{tutoNumber}/{title}
+    path:     /{language}/{tutoNumber}/{slug}
     defaults: { _controller: CodasciiTutoBundle:Tuto:tuto }
     requirements:
         language: html-css|cpp|php|javascript|jquery
